v 1.2.1 bump -- image format fixes